--- a/index.html
+++ b/index.html
@@ -74,8 +74,12 @@ img{
 </head>
 
 <body>
-img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram logo">
-img src="https://upload.wikimedia.org/wikipedia/commons/9/91/TikTok_logo.svg" alt="TikTok logo">
+<a href="https://www.instagram.com/dolly759929" target="_blank">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram logo">
+</a>
+<a href="https://www.tiktok.com/@drx.streetwear" target="_blank">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/TikTok_logo.svg" alt="TikTok logo">
+</a>
 <header>Welcome to Dolly Eatery 🍽️</header>
 
 <!-- REGISTER -->
