--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
       cursor:pointer;
     }
 
+    .video-box{
+      max-width:400px;
+      margin:20px auto;
+    }
+
     img{
       width:100%;
       border-radius:10px;
@@ -90,6 +95,17 @@
 </head>
 
 <body>
+
+<!-- YOUTUBE VIDEO (SHOWS FIRST) -->
+<div class="video-box">
+  <iframe
+    width="100%"
+    height="215"
+    src="https://www.youtube.com/embed/REa6lI9mLLs"
+    frameborder="0"
+    allowfullscreen>
+  </iframe>
+</div>
 
 <header>Welcome to Dolly Eatery 🍽️</header>
 
@@ -134,12 +150,12 @@
     </a>
 
     <a href="https://www.tiktok.com/@dolly759929" target="_blank">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/TikTok_logo.svg" alt="TikTok">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/TikTok_logo.png" alt="TikTok">
     </a>
   </div>
 
   <h3>Place Your Order</h3>
-  <button onclick="startOrder()">Start Order</button>
+  <button onclick="placeOrder()">Place Order</button>
 </div>
 
 <script>
@@ -180,7 +196,6 @@
 
     localStorage.setItem(email, pass);
     alert("Registration successful. Please login.");
-
     showLogin();
   }
 
@@ -196,8 +211,8 @@
     }
   }
 
-  function startOrder(){
-    alert("Order feature coming next 😄");
+  function placeOrder(){
+    alert("Order page coming next 😄");
   }
 </script>
 
