Update register function to hide and show boxes

--- a/demo.html
+++ b/demo.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -42,7 +43,8 @@
 
 <script>
 function register(){
-  alert("Register button clicked");
+  document.getElementById("registerBox").classList.add("hidden");
+  document.getElementById("loginBox").classList.remove("hidden");
 }
 
 function login(){
