--- a/demo.html
+++ b/demo.html
@@ -1,47 +1,213 @@
-<script>
-function register(){
-  let email = document.getElementById("regEmail").value;
-  let pass = document.getElementById("regPass").value;
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Dolly E3</title>
 
-  if(email === "" || pass === ""){
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6fb;
+      margin: 0;
+    }
+
+    .page {
+      display: none;
+      padding: 20px;
+      max-width: 420px;
+      margin: auto;
+    }
+
+    .active {
+      display: block;
+    }
+
+    .box {
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      margin-top: 20px;
+    }
+
+    input, button, select {
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+    }
+
+    button {
+      background: #ff6b00;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+
+    h1, h2 {
+      text-align: center;
+    }
+
+    .logo {
+      text-align: center;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .food {
+      border: 1px solid #ddd;
+      padding: 10px;
+      margin: 5px 0;
+      cursor: pointer;
+    }
+
+    .food.selected {
+      background: #ffe5cc;
+    }
+
+    .social {
+      display: flex;
+      justify-content: space-around;
+      margin-top: 15px;
+      font-weight: bold;
+    }
+  </style>
+</head>
+
+<body>
+
+<!-- PAGE 1: AUTH -->
+<div class="page active" id="authPage">
+  <div class="logo">🍗 Dolly E3</div>
+
+  <div class="box">
+    <h2>Sign Up / Login</h2>
+    <input id="email" placeholder="Email">
+    <input id="phone" placeholder="Phone Number">
+    <input id="password" type="password" placeholder="Password">
+    <button onclick="signup()">Sign Up</button>
+    <button onclick="login()">Login</button>
+    <button onclick="alert('Password reset link sent (demo)')">Forgot Password</button>
+  </div>
+</div>
+
+<!-- PAGE 2: LANDING -->
+<div class="page" id="landingPage">
+  <div class="box">
+    <img src="https://images.unsplash.com/photo-1528605248644-14dd04022da1"
+         width="100%" style="border-radius:8px">
+    <h2>Enjoy Delicious Meals</h2>
+    <button onclick="go('foodPage')">Place Your Order</button>
+
+    <div class="social">
+      <div>TikTok</div>
+      <div>Instagram</div>
+    </div>
+  </div>
+</div>
+
+<!-- PAGE 3: FOOD -->
+<div class="page" id="foodPage">
+  <h2>Select Your Food</h2>
+
+  <div class="food" onclick="selectFood(this)">Burger</div>
+  <div class="food" onclick="selectFood(this)">Indomie</div>
+  <div class="food" onclick="selectFood(this)">Rice & Chicken</div>
+  <div class="food" onclick="selectFood(this)">Rice & Stew</div>
+  <div class="food" onclick="selectFood(this)">Plantain</div>
+  <div class="food" onclick="selectFood(this)">Fried Rice</div>
+  <div class="food" onclick="selectFood(this)">Jollof Rice</div>
+  <div class="food" onclick="selectFood(this)">Spaghetti</div>
+  <div class="food" onclick="selectFood(this)">Chicken & Chips</div>
+  <div class="food" onclick="selectFood(this)">Salad</div>
+
+  <button onclick="go('addressPage')">Next</button>
+</div>
+
+<!-- PAGE 4: ADDRESS + PAYMENT -->
+<div class="page" id="addressPage">
+  <h2>Delivery Details</h2>
+
+  <input id="address" placeholder="Paste Google Maps address link">
+  
+  <select id="payment">
+    <option value="">Select Payment</option>
+    <option>Bank Transfer</option>
+    <option>ATM Card</option>
+  </select>
+
+  <button onclick="submitOrder()">Submit Order</button>
+</div>
+
+<!-- PAGE 5: SUCCESS -->
+<div class="page" id="successPage">
+  <div class="box">
+    <h2>Order Successful 🎉</h2>
+    <p>Thanks for ordering from Dolly E3.</p>
+    <p>Your food will arrive in 1–2 hours.</p>
+  </div>
+</div>
+
+<script>
+function go(pageId){
+  document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
+  document.getElementById(pageId).classList.add('active');
+}
+
+function signup(){
+  let email = document.getElementById('email').value;
+  let pass = document.getElementById('password').value;
+
+  if(!email || !pass){
     alert("Fill all fields");
     return;
   }
 
-  let userData = {
-    password: pass,
-    balance: 50000
-  };
+  if(localStorage.getItem(email)){
+    alert("Email already registered");
+    return;
+  }
 
-  localStorage.setItem(email, JSON.stringify(userData));
-
-  document.getElementById("registerBox").classList.add("hidden");
-  document.getElementById("loginBox").classList.remove("hidden");
+  localStorage.setItem(email, pass);
+  go('landingPage');
 }
 
 function login(){
-  let email = document.getElementById("loginEmail").value;
-  let pass = document.getElementById("loginPass").value;
+  let email = document.getElementById('email').value;
+  let pass = document.getElementById('password').value;
 
-  if(email === "" || pass === ""){
-    alert("Enter email and password");
+  let saved = localStorage.getItem(email);
+  if(!saved){
+    alert("Account not found");
     return;
   }
 
-  let user = localStorage.getItem(email);
-  if(!user){
-    alert("Account not found. Please register.");
+  if(saved !== pass){
+    alert("Incorrect password");
     return;
   }
 
-  let data = JSON.parse(user);
-  if(data.password !== pass){
-    alert("Wrong password");
+  go('landingPage');
+}
+
+function selectFood(el){
+  el.classList.toggle('selected');
+}
+
+function submitOrder(){
+  let address = document.getElementById('address').value;
+  let payment = document.getElementById('payment').value;
+
+  if(!address.includes("maps")){
+    alert("Invalid address. Use Google Maps link.");
     return;
   }
 
-  document.getElementById("loginBox").classList.add("hidden");
-  document.getElementById("dashboard").classList.remove("hidden");
-  document.getElementById("balance").innerText = data.balance;
+  if(!payment){
+    alert("Select payment method");
+    return;
+  }
+
+  go('successPage');
 }
 </script>
+
+</body>
+</html>
